<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.asus.myproject.MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <Button
            android:id="@+id/btnsms"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/sms"/>

        <Button
            android:id="@+id/btnRtlLtrText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/RtlLtr"/>

        <Button
            android:id="@+id/btncamera"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/camera"/>
    </LinearLayout>


</LinearLayout>
