<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.asus.myproject.RtlLtrText">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="10dp"
        android:gravity="center_horizontal"
        android:orientation="vertical">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <TextView
                android:id="@+id/rtl"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="right"
                android:gravity="right"
                android:text="@string/RTL"/>

            <TextView
                android:id="@+id/ltr"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="left"
                android:layout_gravity="left"
                android:text="@string/LTR"/>
            <TextView
                android:id="@+id/txtitalic"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/txtitalic"
                android:textColor="#00a651"
                android:background="#111"
                android:textSize="20dip"
                android:textStyle="italic"/>
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_gravity="center">

                <EditText
                    android:id="@+id/edtrtl"
                    android:layout_width="350dp"
                    android:layout_height="wrap_content" />

                <EditText
                    android:id="@+id/edtltr"
                    android:layout_width="350dp"
                    android:layout_height="wrap_content"
                    android:gravity="left"
                    android:textAlignment="gravity"
                    android:layout_gravity="left"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="right"
                android:layout_gravity="center">
                <EditText
                    android:id="@+id/edtGetText"
                    android:layout_width="350dp"
                    android:layout_height="wrap_content"
                    android:gravity="right"
                    android:textAlignment="gravity"
                    />
            </LinearLayout>

        </LinearLayout>

    </LinearLayout>

</LinearLayout>
